udisks: Return empty string for "root" clearTextPath

There cannot be an empty object path on DBus, so "/" is used to denote
no clear text device. Return empty string explicitly here to avoid
littering even more places with empty || "/" checks.

BUG: 485507